Completed the design for desktop and mobile

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <section class="results-summary-component">
@@ -31,19 +32,19 @@
       <h4>Summary</h4>
 
       <div class="card">
-        <div class="category">Reaction</div>
+        <div class="category"><i></i><p>Reaction</p></div>
         <div class="category-result"><span class="category-score">80</span> / 100</div>
       </div>
       <div class="card">
-        <div class="category">Memory</div>
+        <div class="category"><i></i><p>Memory</p></div>
         <div class="category-result"><span class="category-score">92</span> / 100</div>
       </div>
       <div class="card">
-        <div class="category">Verbal</div>
+        <div class="category"><i></i><p>Verbal</p></div>
         <div class="category-result"><span class="category-score">61</span> / 100</div>
       </div>
       <div class="card">
-        <div class="category">Visual</div>
+        <div class="category"><i></i><p>Visual</p></div>
         <div class="category-result"><span class="category-score">72</span> / 100</div>
       </div>
       <button>Continue</button>
@@ -53,7 +54,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Husam</a>.
     </div>
   </footer>
 </body>
